# cminpack_numba

./: .gitignore  .gitmodules  README.md  pyproject.toml
cminpack_numba/: __init__.py  cminpack_numba.py  scipy_overloads.py  signatures.py  utils.py
examples/: hybrd.ipynb  lmdif.ipynb
tests/: test_hybrd1.py  test_hybrj1.py  test_lmder1.py  test_lmdif1.py
